--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 <!-- Header -->
 <header class="header">
 
-	<a href="#" class="menu-btn"><span></span></a>
+	<!-- <a href="#" class="menu-btn"><span></span></a> -->
 	
 	<!-- menu -->
 	<div class="top-menu">
