--- a/_includes/section-about.html
+++ b/_includes/section-about.html
@@ -10,12 +10,12 @@
 
 	<!-- content -->
 	<div class="row">
-		<div class="col col-d-6 col-t-6 col-m-12 border-line-v">
+		<div class="col col-d-12 col-t-12 col-m-12 border-line-v">
 			<div class="text-box">
 				{{ content.text }}
 			</div>
 		</div>
-		<div class="col col-d-6 col-t-6 col-m-12 border-line-v">
+		<!-- <div class="col col-d-6 col-t-6 col-m-12 border-line-v">
 			<div class="info-list">
 				<ul>
 					{% for item in content.list %}
@@ -23,7 +23,7 @@
 					{% endfor %}
 				</ul>
 			</div>
-		</div>
+		</div> -->
 		<div class="clear"></div>
 	</div>
 
