--- a/_includes/section-resume.html
+++ b/_includes/section-resume.html
@@ -1,5 +1,6 @@
 {% assign content = site.data.content['resume'] %}
 
+
 <!-- Resume -->
 <div class="content resume">
 
@@ -14,12 +15,31 @@
 		<!-- experience -->
 		<div class="col col-d-6 col-t-6 col-m-12 border-line-v">
 			<div class="resume-title border-line-h">
-				<div class="icon"><i class="ion ion-{{ content.experience.icon }}"></i></div>
-				<div class="name">{{ content.experience.title }}</div>
+				<div class="icon"><i class="ion ion-{{ content.academic.icon }}"></i></div>
+				<div class="name">{{ content.academic.title }}</div>
 			</div>
 			<div class="resume-items">
-				{% for item in content.experience.items %}
-				<div class="resume-item{% if item.h_line == 1 %} border-line-h{% endif %}{% if item.active == 1 %} active{% endif %}">
+				{% for item in content.academic.items %}
+				<div class="resume-item{% if item.h_line == 1 %} border-line-h{% endif %} active">
+					<div class="date">{{ item.year }}</div>
+					<div class="name">{{ item.role }}</div>
+					<div class="company">{{ item.company }}</div>
+					<p>
+						{{ item.text }}
+					</p>
+				</div>
+				{% endfor %}
+			</div>
+		</div>
+
+		<div class="col col-d-6 col-t-6 col-m-12 border-line-v">
+			<div class="resume-title border-line-h">
+				<div class="icon"><i class="ion ion-{{ content.industry.icon }}"></i></div>
+				<div class="name">{{ content.industry.title }}</div>
+			</div>
+			<div class="resume-items">
+				{% for item in content.industry.items %}
+				<div class="resume-item{% if item.h_line == 1 %} border-line-h{% endif %} active">
 					<div class="date">{{ item.year }}</div>
 					<div class="name">{{ item.role }}</div>
 					<div class="company">{{ item.company }}</div>
@@ -32,14 +52,14 @@
 		</div>
 
 		<!-- education -->
-		<div class="col col-d-6 col-t-6 col-m-12 border-line-v">
+		<!-- <div class="col col-d-6 col-t-6 col-m-12 border-line-v">
 			<div class="resume-title border-line-h">
 				<div class="icon"><i class="ion ion-{{ content.education.icon }}"></i></div>
 				<div class="name">{{ content.education.title }}</div>
 			</div>
 			<div class="resume-items">
 				{% for item in content.education.items %}
-				<div class="resume-item{% if item.h_line == 1 %} border-line-h{% endif %}">
+				<div class="resume-item{% if item.h_line == 1 %} border-line-h{% endif %} active">
 					<div class="date">{{ item.year }}</div>
 					<div class="name">{{ item.institution }}</div>
 					<div class="company">{{ item.city }}</div>
@@ -49,7 +69,7 @@
 				</div>
 				{% endfor %}
 			</div>
-		</div>
+		</div> -->
 
 		<div class="clear"></div>
 	</div>
