--- a/_sass/ryancv/setting.scss
+++ b/_sass/ryancv/setting.scss
@@ -11,8 +11,8 @@
 */
 
 $active-color: #00A6D6; /* active theme color */
-$dark-color: #323232; /* primary theme color */
-$default-color: #646464; /* secondary theme color */
+$dark-color: #0066a2; /* primary theme color */
+$default-color: #000000; /* secondary theme color */
 
 $bg: #fff;
 $extra-color: #999;
