--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
         </ul>
       </div>
 
-      {%- include sidebar.html -%}
+      <!-- {%- include sidebar.html -%} -->
 
       {% assign animation = site.data.settings['settings'].animation %}
       {% case animation %}
