--- a/_includes/section-resume.html
+++ b/_includes/section-resume.html
@@ -20,7 +20,7 @@
 			</div>
 			<div class="resume-items">
 				{% for item in content.academic.items %}
-				<div class="resume-item{% if item.h_line == 1 %} border-line-h{% endif %} active">
+				<div class="resume-item{% if item.h_line == 1 %} border-line-h{% endif %} {% if item.active == 1 %}active{% endif %}">
 					<div class="date">{{ item.year }}</div>
 					<div class="name">{{ item.role }}</div>
 					<div class="company">{{ item.company }}</div>
@@ -39,7 +39,7 @@
 			</div>
 			<div class="resume-items">
 				{% for item in content.industry.items %}
-				<div class="resume-item{% if item.h_line == 1 %} border-line-h{% endif %} active">
+				<div class="resume-item{% if item.h_line == 1 %} border-line-h{% endif %} {% if item.active == 1 %}active{% endif %}">
 					<div class="date">{{ item.year }}</div>
 					<div class="name">{{ item.role }}</div>
 					<div class="company">{{ item.company }}</div>
