--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,11 +5,11 @@
   {%- seo -%}
 
   <!-- Load Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css">
 
   <!-- Load CSS -->
   <link rel="stylesheet" href="{{ 'assets/css/style.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ 'assets/css/fonts.css' | relative_url }}">
   <link rel="stylesheet" href="{{ 'assets/css/ionicons.css' | relative_url }}" />
   <link rel="stylesheet" href="{{ 'assets/css/magnific-popup.css' | relative_url }}" />
   <link rel="stylesheet" href="{{ 'assets/css/animate.css' | relative_url }}" />
