--- a/_includes/section-portfolio.html
+++ b/_includes/section-portfolio.html
@@ -113,6 +113,10 @@
 									<!-- <span class="arrow"></span> -->
 								</a>
 								{% endfor %}
+								<a href="works/{{ work.slug }}" class="publication-button">
+									<span class="text">Permalink to here</span>
+									<!-- <span class="arrow"></span> -->
+								</a>
 								<div class="blog-content">
 									{{ work.content }}
 								</div>
