--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,8 +1,8 @@
 <!-- Plugins -->
+<script src="{{ 'assets/js/imagesloaded.pkgd.js' | relative_url }}"></script>
 <script src="{{ 'assets/js/jquery.min.js' | relative_url }}"></script>
 <script src="{{ 'assets/js/jquery.validate.js' | relative_url }}"></script>
 <script src="{{ 'assets/js/jquery.magnific-popup.js' | relative_url }}"></script>
-<script src="{{ 'assets/js/imagesloaded.pkgd.js' | relative_url }}"></script>
 <script src="{{ 'assets/js/isotope.pkgd.js' | relative_url }}"></script>
 <script src="{{ 'assets/js/jquery.slimscroll.js' | relative_url }}"></script>
 <script src="{{ 'assets/js/owl.carousel.js' | relative_url }}"></script>
@@ -17,3 +17,20 @@
 
 <!-- Main -->
 <script src="{{ 'assets/js/scripts.js' | relative_url }}"></script>
+
+<script src="{{ 'assets/js/jquery.min.js' | relative_url }}"></script>
+<script src="{{ 'assets/js/jquery.validate.js' | relative_url }}"></script>
+<script src="{{ 'assets/js/js-year-calendar.js' | relative_url }}"></script>
+<script src="{{ 'assets/js/popper.min.js' | relative_url }}"></script>
+<script src="{{ 'assets/js/bootstrap.min.js' | relative_url }}"></script>
+<script src="{{ 'assets/js/moment.min.js' | relative_url }}"></script>
+<script src="{{ 'assets/js/moment-timezone-with-data.min.js' | relative_url }}"></script>
+<script src="{{ 'assets/js/store.min.js' | relative_url }}"></script>
+<script src="{{ 'assets/js/ouical.min.js' | relative_url }}"></script>
+<script src="{{ 'assets/js/bootstrap-multiselect.min.js' | relative_url }}"></script>
+<script src="{{ 'assets/js/jquery.countdown.min.js' | relative_url }}"></script>
+
+<link rel="stylesheet" type="text/css" href="{{ '/assets/css/js-year-calendar.min.css' | relative_url }}?t={{site.time | date: '%s' }}" media="screen,projection">
+<link rel="stylesheet" type="text/css" href="{{ '/assets/css/bootstrap.min.css' | relative_url }}">
+<link rel="stylesheet" type="text/css" href="{{ '/assets/css/calendar.css' | relative_url }}?t={{site.time | date: '%s'}}" media="screen,projection">
+
