--- a/_includes/section-contacts-info.html
+++ b/_includes/section-contacts-info.html
@@ -14,6 +14,9 @@
 			{% if site.google_maps_api_key != '' %}
 			<div class="map" id="map" data-lat="{{ site.google_maps_lat }}" data-long="{{ site.google_maps_long }}" data-zoom="{{ site.google_maps_zoom }}"></div>
 			{% endif %}
+			<div class="text-box">
+				{{ content.text }}
+			</div>
 			<div class="info-list">
 				<ul>
 					{% for item in content.list %}
