--- a/_sass/ryancv/layout.scss
+++ b/_sass/ryancv/layout.scss
@@ -882,7 +882,7 @@
 			font-size: $small-size;
 			color: $dark-color;
 			font-weight: 500;
-			text-transform: uppercase;
+			// text-transform: uppercase;
 		}
 		p {
 			margin: 0;
@@ -936,7 +936,7 @@
 			font-size: $small-size;
 			color: $dark-color;
 			font-weight: 500;
-			text-transform: uppercase;
+			// text-transform: uppercase;
 		}
 		.amount {
 			margin: 0 0 25px 0;
@@ -1034,7 +1034,7 @@
 			font-size: $small-size;
 			color: $dark-color;
 			font-weight: 500;
-			text-transform: uppercase;
+			// text-transform: uppercase;
 		}
 	}
 }
@@ -1088,7 +1088,7 @@
 		line-height: $small-size;
 		color: $dark-color;
 		font-weight: 500;
-		text-transform: uppercase;
+		text-transform: none;
 	}
 }
 
@@ -1135,7 +1135,7 @@
 			font-size: $small-size;
 			color: $dark-color;
 			font-weight: 500;
-			text-transform: uppercase;
+			// text-transform: uppercase;
 		}
 		.company {
 			margin: 0 0 10px 0;
@@ -1661,6 +1661,12 @@
 	padding-bottom: 10px;
 }
 
+.students-list {
+	margin-bottom: -20px;
+	padding-bottom: 0px;
+  padding-top: 0px;
+}
+
 .content.skills .row .col.col-d-12 .skills-list.circles ul li,
 .content.skills .row .col.col-t-12 .skills-list.circles ul li {
     width: 24%;
@@ -1701,6 +1707,11 @@
 
 .skills-list.list ul li .name-news:before {
 	content: "\f125";
+}
+
+.skills-list.list ul li .students-text:before {
+	content: none;
+	vertical-align: top;
 }
 
 .skills-list.dotted ul li .progress {
