--- a/_includes/section-students.html
+++ b/_includes/section-students.html
@@ -35,7 +35,7 @@
 									</div>
             <div class="col col-d-10 col-t col-m students-text-col" style="margin-left: 10px;">
 									<div class="students-text">
-										{{ item.label }}
+										{{ item.label | markdownify }}
 									</div>
 									</div>
 						</div>
